@@ -144,7 +144,6 @@ typedef struct lisp_window {
     XWindowAttributes attr;
     XSizeHints hints;
     XWMHints *wmhints;
-    Window transient_for_hint;
     Window *cmap_windows;
     int n_cmap_windows;
     repv full_name, name, icon_name;
