@@ -1,3 +1,8 @@
+2002-10-20    <jsh@unfactored.org>
+
+	* windows.c, sawmill_subrs.h, sawmill.h, events.c: removed code
+	to read WM_TRANSIENT_FOR property, handled by Lisp code now
+
 2002-10-19  John Harper  <jsh@unfactored.org>
 
 	* keys.c (find_meta): use our own nconc function
